This is my product layout for using ing recycler view. pls summit you code.                _   _                *\ /*                  o                 ---

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Phone Shop</string>
+    <string name="name">Iphone 11pro max</string>
+    <string name="price">1399$</string>
 </resources>
